--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Quiénes somos</title>
+    <title>Home</title>
   </head>
 <body>
 
@@ -204,7 +204,7 @@
     <section>
         <div class="banner-slide">
             <div class="banner-content">
-                <img src="img/home/banner_home.png" alt="" class="d-none d-lg-block">
+                <img src="img/home/banner_home.png" alt="" class="d-none d-lg-block" >
                 <img src="img/home/banner-tablet_home01_opt.png" alt="" class="d-none d-md-block d-sm-block  d-lg-none">
                 <img src="img/home/banner-mobile_Home.png" alt="" class="d-block d-sm-none">
                 <div class="bluebox home">
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="banner-content">
-                <img src="img/home/banner_propietario (3).png" alt="" class="d-none d-lg-block">
+                <img src="img/home/banner_propietario (3).png" alt="" class="d-none d-lg-block" >
                 <img src="img/home/banner-tablet_home02_opt.png" alt="" class="d-none d-md-block d-sm-block  d-lg-none">
                 <img src="img/home/banner_propietario-movil.png" alt="" class="d-block d-sm-none">
                 <div class="bluebox home">
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="banner-content">
-                <img src="img/home/banner_arrendatario (1).png" alt="" class="d-none d-lg-block">
+                <img src="img/home/banner_arrendatario (1).png" alt="" class="d-none d-lg-block" >
                 <img src="img/home/banner-tablet_arrendatario_opt.png" alt="" class="d-none d-md-block d-sm-block d-lg-none">
                 <img src="img/home/banner-mobile_arrendatario.png" alt="" class="d-block d-sm-none">
                 <div class="bluebox home">
@@ -251,7 +251,7 @@
         <div class="container">
             <div class="d-flex justify-content-center slider-modalidades position-relative">
                 <div class="home-minibox">
-                    <img src="img/home/arrendatario.png" alt="">
+                    <img src="img/home/arrendatario.png" alt="" width="365" height="268">
                     <div class="gray-box">
                         <h5>
                             Arrendatario
@@ -262,7 +262,7 @@
                     </div>
                 </div>
                 <div class="home-minibox">
-                    <img src="img/home/inmobiliaria.png" alt="">
+                    <img src="img/home/inmobiliaria.png" alt="" width="365" height="268">
                     <div class="gray-box">
                         <h5>
                             Inmobiliaria
@@ -273,7 +273,7 @@
                     </div>
                 </div>
                 <div class="home-minibox">
-                    <img src="img/home/propietario.png" alt="">
+                    <img src="img/home/propietario.png" alt="" width="365" height="268">
                     <div class="gray-box">
                         <h5>
                             Propietario
@@ -293,7 +293,7 @@
             <div class="gray-bg estudio-home">
                 <div class="row">
                     <div class="col-xl-4 d-none d-xl-block">
-                        <img src="img/home/catalina.png" alt="">
+                        <img src="img/home/catalina.png" alt="" width="300" height="290">
                     </div>
                     <div class="col-xl-8">
                         <div class="pb-5"></div>
@@ -311,10 +311,16 @@
                                   
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                         <li>
-                                          <a class="dropdown-item" href="#">Persona Natural</a>
+                                          <a class="dropdown-item" href="#">
+                                              <img src="img/home/icon_profesionalismo.svg" alt="" width="48" height="30">
+                                              Estudio persona Natural
+                                            </a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item" href="#">Persona Jurídica</a>
+                                            <a class="dropdown-item" href="#">
+                                                <img src="img/home/icon_pertenencia.svg" alt="" width="48" height="30">
+                                                Estudio persona Jurídica
+                                            </a>
                                         </li>                                        
                                     </ul>
                                 </div>
@@ -349,7 +355,7 @@
                                 <a href="#" class="btn-gray  mx-auto">Consultando aquí</a>                            
                             </div>
                             <div class="col-5">
-                                <img src="img/home/info.png" alt="" class="d-none d-md-block">
+                                <img src="img/home/info.png" alt="" class="d-none d-md-block" width="225" height="250">
                             </div>
                         </div>
                     </div>
@@ -430,7 +436,7 @@
             <div class="py-4"></div>
             <div class="d-flex justify-content-center entradas-blog">                
                 <div class="blog-card">
-                    <img src="img/home/blog1.png" alt="">
+                    <img src="img/home/blog1.png" alt="" >
                     <div class="text-card">
                         <h5 class="g-boldfont">
                             Excepteur sint
