--- a/gobierno.html
+++ b/gobierno.html
@@ -378,7 +378,7 @@
               <div class="col-lg-2 col-md-4 d-none d-xl-block">
                   <div class="logos">
                       <img src="img/vigilado.png" alt="">
-                      <img src="img/logo.png" alt="" class="logo">
+                      <img src="img/logo.svg" alt="" class="logo">
                   </div>
               </div>
               <div class="col-lg-2 col-md-4 d-none d-md-block">
