--- a/somos.html
+++ b/somos.html
@@ -278,7 +278,7 @@
 </section>
 
 
-<section>
+    <section>
   
     <div class="footer-sec">
         <div class="container">
@@ -286,7 +286,7 @@
                 <div class="col-lg-2 col-md-4 d-none d-xl-block">
                     <div class="logos">
                         <img src="img/vigilado.png" alt="">
-                        <img src="img/logo.png" alt="" class="logo">
+                        <img src="img/logo.svg" alt="" class="logo">
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-4 d-none d-md-block">
@@ -456,7 +456,7 @@
     <div class="blue-rights">
         @2021 Investigaciones y Cobranzas El Libertador S.A.   -   Todos los derechos reservados
     </div>
-  </section>
+    </section>
   
 <!-- Optional JavaScript; choose one of the two! -->
 
