--- a/Intermediarios.html
+++ b/Intermediarios.html
@@ -249,7 +249,7 @@
       <div class="container">
         <div class="row row-cols-1 row-cols-md-4 g-4">
           <div class="slider-servicios">
-            <div class="col">
+            <div class="col-aux">
               <div class="card">
                 <div class="img-card-box">
                 <img src="img/inmobiliarios/solicitudes.png" class="card-img-top" alt="Solicitudes de arrendamiento">
@@ -260,7 +260,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-aux">
               <div class="card">
                 <div class="img-card-box">
                 <img src="img/inmobiliarios/capacitacion.png" class="card-img-top" alt="Capacitación inmobiliaria">
@@ -271,7 +271,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-aux">
               <div class="card">
                 <div class="img-card-box">
                 <img src="img/inmobiliarios/reportes.png" class="card-img-top" alt="Reportes de facturación">
@@ -282,7 +282,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-aux">
               <div class="card">
                 <div class="img-card-box">
                 <img src="img/inmobiliarios/novedades.png" class="card-img-top" alt="Programa de novedades">
@@ -293,7 +293,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-aux">
               <div class="card">
                 <div class="img-card-box">
                 <img src="img/inmobiliarios/legislacion.png" class="card-img-top" alt="Programa de novedades">
@@ -305,7 +305,7 @@
               </div>
             </div>
 
-            <div class="col">
+            <div class="col-aux">
               <div class="card">
                 <div class="img-card-box">
                 <img src="img/inmobiliarios/asesoria.png" class="card-img-top" alt="Programa de novedades">
@@ -317,7 +317,7 @@
               </div>
             </div>
 
-            <div class="col">
+            <div class="col-aux">
               <div class="card">
                 <div class="img-card-box">
                 <img src="img/inmobiliarios/judiciales.png" class="card-img-top" alt="Programa de novedades">
@@ -337,7 +337,7 @@
         <div class="row">
           <div class="col-xxl-12">
             <div class="text-end">
-              <a href="#" class="red hred" >Ver todos los servicios</a>
+              <a href="#" class="red hred" id="test" >Ver todos los servicios</a>
             </div>
           </div>
         </div>
@@ -351,31 +351,33 @@
 </div>
 <div class="container">
   <div class="row g-3">
-    <div class="col-xxl-6">
-      <div class="colum-sec">
-        <div class="container especial-img">
-          <div class="row g-2">
-            <div class="col-xxl-4">
-              <img src="img/inmobiliarios/inmobiliario02.png">
+    <div class="col-xxl-6 col-xl-6 col-lg-4">
+        <div class="container">
+            <div class="colum-sec">
+                <div class="container especial-img">
+                    <div class="row g-2">
+                        <div class="col-xxl-4 col-lg-5 d-none d-xl-block">
+                            <img src="img/inmobiliarios/inmobiliario02.png">
+                        </div>
+                        <div class="col-xxl-8 col-xl-7 col-lg-12 col-md-12">
+                            <div class="colum-dato h-100 interm">
+                                <h3 class="text-start mt-n1">Póliza para Contratos de Arrendamiento de Seguros Bolívar</h3>
+                                <p>Frente a todos los riesgos presentes al momento de arrendar un inmueble, Seguros Comerciales Bolívar S.A. presenta su Póliza de Cumplimiento para Contratos de Arrendamiento.</p>
+                                <a class="d-block text-end blue hblue" href="#">Ver producto</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-xxl-8">
-              <div class="colum-dato h-100">
-                <h3 class="text-start mt-n1">Póliza para Contratos de Arrendamiento de Seguros Bolívar</h3>
-                <p>Frente a todos los riesgos presentes al momento de arrendar un inmueble, Seguros Comerciales Bolívar S.A. presenta su Póliza de Cumplimiento para Contratos de Arrendamiento.</p>
-                <a class="d-block text-end blue hblue" href="#">Ver producto</a>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-    <div class="col-xxl-6">
+    <div class="col-xxl-6 col-xl-6 col-lg-8">
       <div class="container">
         <div class="row g-3">
-          <div class="col-xxl-6">
+          <div class="col-xxl-6 col-lg-6">
             <div class="card colum-sec servicio-info">
               <div class="img-card-box">
-              <img src="img/inmobiliarios/futuro.png" class="card-img-top" alt="Programa de novedades">
+              <img src="img/inmobiliarios/futuro.png" class="card-img-top d-none d-lg-block" alt="Programa de novedades">
               </div>
               <div class="card-body body-card-box text-center">
                 <h5 class="card-title text-start ps-3">Futuro producto</h5>
@@ -384,10 +386,10 @@
               </div>
             </div>
           </div>
-          <div class="col-xxl-6">
+          <div class="col-xxl-6 col-lg-6">
             <div class="card colum-sec servicio-info">
               <div class="img-card-box">
-              <img src="img/inmobiliarios/futuro.png" class="card-img-top" alt="Programa de novedades">
+              <img src="img/inmobiliarios/futuro.png" class="card-img-top d-none d-lg-block" alt="Programa de novedades">
               </div>
               <div class="card-body body-card-box text-center">
                 <h5 class="card-title text-start ps-3">Futuro producto</h5>
@@ -656,8 +658,98 @@
             slidesToShow: 4,
             slidesToScroll: 4,
             arrows:false,
-            dots:true             
+            dots:true,
+            responsive: [
+                {
+                breakpoint: 1400,
+                settings: {
+                    arrows: false,
+                    centerMode: true,
+                    centerPadding: '50px',                    
+                    slidesToShow: 3,      
+                    slidesToScroll: 3,              
+                }
+                },
+                    {
+                    breakpoint: 1200,
+                        settings: {
+                            arrows: false,
+                            centerMode: true,
+                            centerPadding: '50px',
+                            slidesToShow: 2,
+                            slidesToScroll: 2,
+                        }
+                    },                
+                    {
+                    breakpoint: 767,
+                        settings: {
+                            arrows: false,
+                            centerMode: true,
+                            centerPadding: '50px',
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                        }
+                    }
+            ]     
         });
+        function handler1() {
+            event.preventDefault();
+            $(this).text('Ver menos');
+            $('.slider-servicios').slick('unslick');
+            $('.slider-servicios').addClass('justify-content-center');
+            $('.slider-servicios .col-aux').addClass('flotante');            
+            $(this).one("click", handler2);
+        }
+
+        function handler2() {
+            event.preventDefault();
+            $(this).text('Ver todos los servicios');
+            $('.slider-servicios').removeClass('justify-content-center');
+            $('.slider-servicios .col-aux').removeClass('flotante');
+            $('.slider-servicios').slick({
+                infinite: true,
+                slidesToShow: 4,
+                slidesToScroll: 4,
+                arrows:false,
+                dots:true,
+                responsive: [
+                    {
+                    breakpoint: 1400,
+                        settings: {
+                            arrows: false,
+                            centerMode: true,
+                            centerPadding: '50px',
+                            slidesToShow: 3,
+                            slidesToScroll: 3,
+                        }
+                    },
+                    {
+                    breakpoint: 1200,
+                        settings: {
+                            arrows: false,
+                            centerMode: true,
+                            centerPadding: '50px',
+                            slidesToShow: 2,
+                            slidesToScroll: 2,
+                        }
+                    },
+                    {
+                    breakpoint: 767,
+                        settings: {
+                            arrows: false,
+                            centerMode: true,
+                            centerPadding: '50px',
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                        }
+                    }
+
+                ]              
+            });
+            $(this).one("click", handler1);
+        }
+        $("#test").one("click", handler1);
+        
         $(".sios").click(function(){
             $(".mensaje").toggle();
         });
