--- a/componentes.html
+++ b/componentes.html
@@ -115,8 +115,8 @@
             <div class="logo-mb">
                 <img src="img/logo.svg" alt="" class="img" width="240" height="30">
             </div>
-            <img src="img/movil/menu.png" alt="" class="menu abrir" onclick="openNav()">
-            <img src="img/movil/cerrar.png" alt="" class="menu cerrar" onclick="closeNav()"></a>  
+            <img src="img/movil/icon_menu.svg" alt="" class="menu abrir" onclick="openNav()">
+            <img src="img/movil/icon_cerrar.svg" alt="" class="menu cerrar" onclick="closeNav()"></a>  
         </div>                      
     </div>
 
@@ -217,7 +217,7 @@
     <div class="py-5"></div>
 
 
-    <section>  
+    <section class="ftr">  
         <div class="footer-sec">
             <div class="container">
                 <div class="row">
