--- a/propietario.html
+++ b/propietario.html
@@ -121,8 +121,8 @@
             <div class="logo-mb">
                 <img src="img/logo.svg" alt="" class="img" width="240" height="30">
             </div>
-            <img src="img/movil/menu.png" alt="" class="menu abrir" onclick="openNav()">
-            <img src="img/movil/cerrar.png" alt="" class="menu cerrar" onclick="closeNav()"></a>              
+            <img src="img/movil/icon_menu.svg" alt="" class="menu abrir" onclick="openNav()">
+            <img src="img/movil/icon_cerrar.svg" alt="" class="menu cerrar" onclick="closeNav()"></a>              
         </div>                      
         <div class="miga">
             <div class="container">
