--- a/home.html
+++ b/home.html
@@ -304,7 +304,8 @@
                                 Arrendatario
                             </h3>
                             <p class="text-center">
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt <a href="#" class="red hred">Consulté aquí</a> mollit occaecat
+                                Encuentra toda la información necesaria
+                                para que adelantes todo tu proceso de arrendamiento con éxito. <a href="#" class="red hred">Consulta aquí</a>
                             </p>
                         </div>
                     </div>
@@ -317,7 +318,8 @@
                                 Inmobiliaria
                             </h3>
                             <p class="text-center">
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt <a href="#" class="red hred">Consulté aquí</a> mollit occaecat
+                                Querido inmobiliario, aquí encontrarás 
+                                toda la información de tu interés.<a href="#" class="red hred">Consulta aquí</a>
                             </p>
                         </div>
                     </div>
@@ -330,7 +332,8 @@
                                 Propietario
                             </h3>
                             <p class="text-center">
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt  sint occaecat <a href="#" class="red hred">Consulté aquí</a> 
+                                Aquí puedes conocer todos nuestros 
+                                productos y servicios.<a href="#" class="red hred">Consulté aquí</a> 
                             </p>
                         </div>
                     </div>
