--- a/Intermediarios.html
+++ b/Intermediarios.html
@@ -252,7 +252,7 @@
           <div class="container">
               <div class="justify-content-sm-start">
                   <div class="bluebox">
-                      <h2 class="text-start">Intermediarios Inmobiliarios</h2>                    
+                      <h2>Intermediarios Inmobiliarios</h2>                    
                   </div>                  
               </div>
           </div>
