--- a/home.html
+++ b/home.html
@@ -420,15 +420,17 @@
                     <div class="col-xl-4 col-lg-6 col-md-6">                        
                         <div class="sm-box">
                             <div class="gray-bg icon-box">
-                                <img src="img/home/icon_al-aula.svg" alt="" class="d-block mx-auto" width="50" height="60">
-                                <div class="bloque">
-                                    <h5 class="text-md-center g-blackfont">
-                                        ¡Al aula!
-                                    </h5>
-                                    <div class="py-2"></div>
-                                    <p class="r-regularfont">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <a href="#" class="red hred underline">Consulté aquí</a>
-                                    </p>
+                                <div class="vc">
+                                    <img src="img/home/icon_al-aula.svg" alt="" class="d-block mx-auto" width="50" height="60">
+                                    <div class="bloque">
+                                        <h5 class="text-md-center g-blackfont">
+                                            ¡Al aula!
+                                        </h5>
+                                        <div class="py-2"></div>
+                                        <p class="r-regularfont">
+                                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <a href="#" class="red hred underline">Consulté aquí</a>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -439,15 +441,16 @@
                     <div class="col-xl-4 col-lg-6 col-md-6">                        
                         <div class="sm-box">
                             <div class="gray-bg icon-box">
-                                <img src="img/home/icon_notificaciones-Jud.svg" alt="" class="d-block mx-auto" width="50" height="65">
-                                <div class="bloque">
-                                    <h5 class="text-md-center g-blackfont">
-                                        Notificaciones judiciales
-                                    </h5>
-                                    <div class="py-2"></div>
-                                    <p class="r-regularfont">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <a href="#" class="red hred underline">Consulté aquí</a>
-                                    </p>
+                                <div class="vc">
+                                    <img src="img/home/icon_notificaciones-Jud.svg" alt="" class="d-block mx-auto" width="50" height="65">
+                                    <div class="bloque">
+                                        <h5 class="text-md-center g-blackfont">
+                                            Notificaciones judiciales
+                                        </h5>                                        
+                                        <p class="r-regularfont">
+                                            <!-- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <a href="#" class="red hred underline">Consulté aquí</a> -->
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -456,15 +459,17 @@
                     <div class="col-xl-4 col-lg-6 col-md-6">                        
                         <div class="sm-box">
                             <div class="gray-bg icon-box">
-                                <img src="img/home/icon_proteccion-datos.svg" alt="" class="d-block mx-auto" width="50" height="65">
-                                <div class="bloque">
-                                    <h5 class="text-md-center g-blackfont">
-                                        Protección de datos
-                                    </h5>
-                                    <div class="py-2"></div>
-                                    <p class="r-regularfont">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <a href="#" class="red hred underline">Consulté aquí</a>
-                                    </p>
+                                <div class="vc">
+                                    <img src="img/home/icon_proteccion-datos.svg" alt="" class="d-block mx-auto" width="50" height="65">
+                                    <div class="bloque">
+                                        <h5 class="text-md-center g-blackfont">
+                                            Protección de datos
+                                        </h5>
+                                        
+                                        <p class="r-regularfont">
+                                            <!-- Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <a href="#" class="red hred underline">Consulté aquí</a> -->
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -472,15 +477,16 @@
                     <div class="col-xl-4 col-lg-6 col-md-6">                        
                         <div class="sm-box">
                             <div class="gray-bg icon-box">
-                                <img src="img/home/icon_contactenos.svg" alt="" class="d-block mx-auto" width="50" height="65">
-                                <div class="bloque">
-                                    <h5 class="text-md-center g-blackfont">
-                                        Contáctenos
-                                    </h5>
-                                    <div class="py-2"></div>
-                                    <p class="r-regularfont">
-                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <a href="#" class="red hred underline">Consulté aquí</a>
-                                    </p>
+                                <div class="vc">
+                                    <img src="img/home/icon_contactenos.svg" alt="" class="d-block mx-auto" width="50" height="65">
+                                    <div class="bloque">
+                                        <h5 class="text-md-center g-blackfont">
+                                            Contáctenos
+                                        </h5>                                        
+                                        <p class="r-regularfont">
+                                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <a href="#" class="red hred underline">Consulté aquí</a> 
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
