--- a/privacidad.html
+++ b/privacidad.html
@@ -369,6 +369,7 @@
                     </div>
                 </div>
             </div>
+            <div class="linea my-5"></div>
 
             <div class="fecha left">
                 Publicado 21/09/2020 - 8:57am   <div class="dec">|</div>   <span>Actualizado 21/01/2021 - 8:50am </span>
