--- a/puntos.html
+++ b/puntos.html
@@ -375,9 +375,9 @@
                                             Oficina Principal
                                         </h2>
                                         <p>
-                                            Cra 13 # 26 - 45 Piso 16 <br>
-                                            Tel: 3527070 <br>
-                                            8:00 a.m - 5:00 p.m <br>
+                                            <span>Cra 13 # 26 - 45 Piso 16</span>
+                                            <span>Tel: 3527070</span>
+                                            <span>8:00 a.m - 5:00 p.m </span>
                                         </p>
                                     </div>
                                 </div>
@@ -390,10 +390,10 @@
                                             Cra 14 # 22 Norte 38, Local 204
                                         </h2>
                                         <p>
-                                            Edificio Punto Norte <br>
-                                            Tel: 7368920 Ext: 200<br>
-                                            8:00 a.m - 1:00 p.m <br>
-                                            2:00 p.m - 5:00 p.m
+                                            <span>Edificio Punto Norte</span>
+                                            <span>Tel: 7368920 Ext: 200</span>
+                                            <span>8:00 a.m - 1:00 p.m</span>
+                                            <span>2:00 p.m - 5:00 p.m</span>
                                         </p>
                                     </div>
                                 </div>
@@ -406,10 +406,10 @@
                                             Oficina Principal
                                         </h2>
                                         <p>
-                                            Cra 54 # 70 -189, Local 2, Piso 3<br>
-                                            Edificio Seguros Bolívar <br>
-                                            Tel: 3604752 <br>
-                                            8:00 a.m - 5:00 p.m <br>                                            
+                                            <span>Cra 54 # 70 -189, Local 2, Piso 3</span>
+                                            <span>Edificio Seguros Bolívar</span>
+                                            <span>Tel: 3604752</span>
+                                            <span>8:00 a.m - 5:00 p.m </span>
                                         </p>
                                     </div>
                                 </div>
@@ -422,11 +422,11 @@
                                             Punto de Radicación
                                         </h2>
                                         <p>
-                                            Diagonal 56 # 18A - 88 <br>
-                                            CC. San Silvestre Piso 4 Local 402 <br>
-                                            Cel: 3107569323 - Tel: 6022107 <br>
-                                            8:00 a.m - 12:00 m <br>
-                                            2:00 p.m - 6:00 p.m
+                                            <span>Diagonal 56 # 18A - 88</span>
+                                            <span>CC. San Silvestre Piso 4 Local 402</span>
+                                            <span>Cel: 3107569323 - Tel: 6022107</span>
+                                            <span>8:00 a.m - 12:00 m</span>
+                                            <span>2:00 p.m - 6:00 p.m</span>
                                         </p>
                                     </div>
                                 </div>
@@ -439,9 +439,9 @@
                                             Oficina Principal
                                         </h2>
                                         <p>
-                                            Calle 42 # 29 -50 Local 07 <br>
-                                            Tel: 6322277 <br>
-                                            8:00 a.m - 6:00 p.m 
+                                            <span>Calle 42 # 29 -50 Local 07</span>
+                                            <span>Tel: 6322277</span>
+                                            <span>8:00 a.m - 6:00 p.m </span>
                                         </p>
                                     </div>
                                 </div>
@@ -454,9 +454,9 @@
                                             Oficina Principal
                                         </h2>
                                         <p>
-                                            Calle 29B # 17 - 109, Pie del Cerro <br>
-                                            Local 1 - 21 CC. San Felipe <br>
-                                            Tel: 6755527 - 6746041 <br>
+                                            <span>Calle 29B # 17 - 109, Pie del Cerro</span>
+                                            <span>Local 1 - 21 CC. San Felipe</span>
+                                            <span>Tel: 6755527 - 6746041</span>
                                             8:00 a.m - 5:00 p.m                                          
                                         </p>
                                     </div>
@@ -470,11 +470,11 @@
                                             Sede Seguros Bolívar
                                         </h2>
                                         <p>
-                                            Cra 4 # 10 - 73. Piso 1 <br>
-                                            Tel: 2611606 Ext: 134 <br>
-                                            Tel: 3527070 Ext: 1733 <br>
-                                            8:00 a.m - 1:00 p.m <br>
-                                            2:00 p.m - 5:00 p.m 
+                                            <span>Cra 4 # 10 - 73. Piso 1</span>
+                                            <span>Tel: 2611606 Ext: 134</span>
+                                            <span>Tel: 3527070 Ext: 1733</span>
+                                            <span>8:00 a.m - 1:00 p.m</span>
+                                            <span>2:00 p.m - 5:00 p.m </span>
                                         </p>
                                     </div>
                                 </div>
@@ -487,10 +487,10 @@
                                             Cra 23 # 67A - 45 Local 3
                                         </h2>
                                         <p>
-                                            Edificio Atalaya <br>
-                                            Tel: 8816029 <br>
-                                            8:00 a.m - 1:00 p.m <br>                                            
-                                            2:00 p.m - 5:00 p.m 
+                                            <span>Edificio Atalaya</span>
+                                            <span>Tel: 8816029</span>
+                                            <span>8:00 a.m - 1:00 p.m </span>
+                                            <span>2:00 p.m - 5:00 p.m </span>
                                         </p>
                                     </div>
                                 </div>
@@ -500,10 +500,10 @@
                                             Neiva
                                         </div>                                        
                                         <p>
-                                            Cra 7 # 10 - 60 Centro <br>
-                                            Tel: 8716103 <br>                                            
-                                            8:00 a.m - 1:00 p.m <br>
-                                            2:00 p.m - 5:00 p.m 
+                                            <span>Cra 7 # 10 - 60 Centro</span>
+                                            <span>Tel: 8716103</span>                                 
+                                            <span>8:00 a.m - 1:00 p.m </span>
+                                            <span>2:00 p.m - 5:00 p.m </span>
                                         </p>
                                     </div>
                                 </div>
@@ -514,12 +514,12 @@
                                         </div>
                                         <h2 class="tit">
                                             Oficina Principal
-                                        </div>
+                                        </h2>
                                         <p>
-                                            Cra 7 # 19 - 28 Of. 1602 <br>
-                                            Torre Bolívar <br>
-                                            Tel: 3347411 - 3330282 <br>
-                                            8:00 a.m - 5:00 p.m 
+                                            <span>Cra 7 # 19 - 28 Of. 1602</span>
+                                            <span>Torre Bolívar</span>
+                                            <span>Tel: 3347411 - 3330282 </span>
+                                            <span>8:00 a.m - 5:00 p.m </span>
                                         </p>
                                     </div>
                                 </div>
@@ -529,11 +529,11 @@
                                             Piedecuesta
                                         </div>                                        
                                         <p>
-                                            Calle 10 # 6 - 70 Parque Piedecuesta <br>
-                                            Tel: 6654050 <br>
-                                            8:00 a.m - 11:30 a.m <br>
-                                            2:00 p.m - 4:00 p.m <br>
-                                            5:00 p.m - 6:00 p.m
+                                            <span>Calle 10 # 6 - 70 Parque Piedecuesta</span>
+                                            <span>Tel: 6654050</span>
+                                            <span>8:00 a.m - 11:30 a.m</span>
+                                            <span>2:00 p.m - 4:00 p.m</span>
+                                            <span>5:00 p.m - 6:00 p.m</span>
                                         </p>
                                     </div>
                                 </div>
@@ -544,12 +544,12 @@
                                         </div>
                                         <h2 class="tit">
                                             Edificio Seguros Bolívar
-                                        </div>
+                                        </h2>
                                         <p>
-                                            Cra 4 # 13 - 14. Piso 2 <br>
-                                            Tel: 4214081 <br>
-                                            8:00 a.m - 11:00 a.m <br>
-                                            2:00 p.m - 5:00 p.m
+                                            <span>Cra 4 # 13 - 14. Piso 2</span>
+                                            <span>Tel: 4214081</span>
+                                            <span>8:00 a.m - 11:00 a.m </span>
+                                            <span>2:00 p.m - 5:00 p.m</span>
                                         </p>
                                     </div>
                                 </div>                                                                
