--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="css/estilo.css">
 
-    <title>Quiénes somos</title>
+    <title>404</title>
   </head>
 <body>
 
@@ -218,8 +218,8 @@
         </a>
     </div>
 
-    <section>
-        <div class="">
+    <section class="npage">
+        <div>
             <div class="vcpage">
                 <div class="nfound">
                     <div class="numero">
