--- a/home.html
+++ b/home.html
@@ -237,8 +237,9 @@
         <div class="banner-slide">
             <div class="banner-content">
                 <picture>
-                    <source media="(max-width:767px)" srcset="img/home/banner-mobile_Home.png">
-                    <source media="(max-width:991px)" srcset="img/home/banner-tablet_home01_opt.png">
+                    <source media="(max-width:767px)" srcset="img/home/Home_Mobile.png">
+                    <source media="(max-width:991px)" srcset="img/home/Home_Tablet768.png">
+                    <source media="(max-width:1440px)" srcset="img/home/Home_Laptop_1440.png">
                     <img src="img/home/banner_home.png" alt="" width="1920" height="630" class="img-fluid">
                 </picture>
 
@@ -254,6 +255,7 @@
                 <picture>
                     <source media="(max-width:767px)" srcset="img/home/banner_propietario-movil.png">
                     <source media="(max-width:991px)" srcset="img/home/banner-tablet_home02_opt.png">
+                    <source media="(max-width:1440px)" srcset="img/home/propietario_Laptop_1440.png">
                     <img src="img/home/banner_propietario (3).png" alt="" width="1920" height="630" class="img-fluid">
                 </picture>
                 
@@ -269,6 +271,7 @@
                 <picture>
                     <source media="(max-width:767px)" srcset="img/home/banner-mobile_arrendatario.png">
                     <source media="(max-width:991px)" srcset="img/home/banner-tablet_arrendatario_opt.png">
+                    <source media="(max-width:1440px)" srcset="img/home/arrendatario_Laptop_1440.png">
                     <img src="img/home/banner_arrendatario (1).png" alt="" width="1920" height="630" class="img-fluid">
                 </picture>
                 
