--- a/404.html
+++ b/404.html
@@ -218,6 +218,7 @@
         </a>
     </div>
 
+
     <section class="npage">
         <div>
             <div class="vcpage">
@@ -244,6 +245,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/vscripts.js"></script>
     
 
   </body>
