--- a/preguntas.html
+++ b/preguntas.html
@@ -28,18 +28,18 @@
     <title>Preguntas frecuentes</title>
   </head>
   <body>
-    <!-- menu desktop  -->
-    <header class="d-none d-lg-block">
+    <!-- Header escritorio -->
+    <header class="d-none d-lg-block brline">
         <div class="red-band"></div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-              <a class="navbar-brand" href="#">
-                  <img src="img/logo.svg" alt="" width="240" height="30">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">
+                <img src="img/logo.svg" alt="" width="240" height="30">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">                    
                     <li class="nav-item">
                         <div class="nav-box">
@@ -103,16 +103,11 @@
                 <a class="button">
                     Estudio Arrendamiento
                 </a>
-              </div>
             </div>
-        </nav>
-        <div class="miga">
-            <div class="container">
-                <a href="index.html" class="red">Inicio</a> / <a href="#" class="blue">preguntas frecuentes</a>
             </div>
-        </div>
+        </nav>        
     </header>
-  
+	
     <!-- Header móvil -->
     <div class="header-mb d-lg-none">
         <div class="red-band"></div>
@@ -122,14 +117,14 @@
             </div>
             <img src="img/movil/icon_menu.svg" alt="" class="menu abrir" onclick="openNav()">
             <img src="img/movil/icon_cerrar.svg" alt="" class="menu cerrar" onclick="closeNav()"></a>              
-        </div>                               
+        </div>                              
     </div>
-    <div class="miga d-lg-none">
-        <div class="container">
-            <a href="index.html" class="red">Inicio</a> / <a href="#" class="blue">preguntas frecuentes</a>
-        </div>
-    </div>
-  
+    <div class="miga">
+		<div class="container">			
+			<a href="index.html" class="red">Inicio</a> <span> / </span> <a href="#" class="blue">preguntas frecuentes</a>
+		</div>
+	</div>
+
     <!-- menú móvil -->
     <div id="overlay"></div>
     <div id="mySidenav" class="sidenav d-lg-none">        
