--- a/gobierno.html
+++ b/gobierno.html
@@ -236,9 +236,11 @@
   </section>
 
   <section class="titulo">
-    <h1 class="text-center tit-espace">
-      Definición del buen Gobierno
-    </h1>
+    <div class="container">
+      <h1 class="text-center tit-espace">
+        Definición del buen Gobierno
+      </h1>
+    </div>
   </section>
 
 
