--- a/Intermediarios.html
+++ b/Intermediarios.html
@@ -416,9 +416,9 @@
                             <div class="col-xxl-6 col-lg-6">
                                 <div class="in-slide rbox">
                                     <img src="img/inmobiliarios/futuro.png" alt="" width="275" height="115">
-                                    <h2 class="text-start px-3">
+                                    <h3 class="text-start px-3">
                                         Futuro producto
-                                    </h2>
+                                    </h3>
                                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa.                                    
                                     </p>
                                     <a href="#" class="d-block text-end blue hred mt-3 me-3">Ver producto</a>
@@ -427,9 +427,9 @@
                             <div class="col-xxl-6 col-lg-6">
                                 <div class="in-slide rbox">
                                     <img src="img/inmobiliarios/futuro.png" alt="" width="275" height="115">
-                                    <h2 class="text-start px-3">
+                                    <h3 class="text-start px-3">
                                         Futuro producto
-                                    </h2>
+                                    </h3>
                                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa.                                    
                                     </p>
                                     <a href="#" class="d-block text-end blue hred mt-3 me-3">Ver producto</a>
@@ -461,7 +461,7 @@
     <section class="blog intermediarios">
     <div class="blue-bg rounded-0 h-450"></div>
         <div class="container mt-n200">            
-            <h2 class="text-center white">
+            <h2 class="text-sm-center white">
                 Eventos especiales
             </h2>  
             <div class="icon-space">
@@ -807,6 +807,17 @@
                             centerPadding: '50px',
                             slidesToShow: 1,
                             slidesToScroll: 1,
+                        }
+                    },
+                    {
+                        breakpoint: 576,
+                        settings: {
+                            arrows: false,
+                            centerMode: false,
+                            centerPadding: '0px',
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                            variableWidth: true
                         }
                     }
 
